# Mini-Nanobot

./: .gitignore  README.md  pyproject.toml  readme-mine.md
.githooks/: post-commit
benchmarks/: tasks.json
docker/: Dockerfile.sandbox
mini_nanobot/: __init__.py  __main__.py  cli.py
mini_nanobot/context/: compressor.py  tokenizer.py
mini_nanobot/core/: graph.py  prompts.py  query.py  query_engine.py  state.py  subagent.py
mini_nanobot/hooks/: manager.py
mini_nanobot/llm/: base.py  openai_provider.py
mini_nanobot/memory/: checkpoint.py  long_term.py  session.py
mini_nanobot/sandbox/: executor.py  policy.py
mini_nanobot/skills/: loader.py  tool.py
mini_nanobot/tools/: agent.py  base.py  executor.py  filesystem.py  git.py  mcp_adapter.py  registry.py  search.py  shell.py
tests/: test_checkpoint_context.py  test_memory_skills.py  test_query_engine.py  test_tools.py
