[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-nanobot"
version = "0.1.0"
description = "A lightweight code-task agent framework with tools, context compression, checkpoints, memory, hooks, and sandboxed shell execution."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mini-Nanobot" }]
dependencies = [
  "jsonschema>=4.22",
  "tiktoken>=0.7",
  "langgraph>=0.2",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
openai = ["openai>=1.40"]

[project.scripts]
nanobot = "mini_nanobot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_nanobot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
